# knowledge-bucket

./: .gitignore  LICENSE  PURPOSE.md  README.md  SYSTEM_CONSTITUTION.md  pyproject.toml
.github/workflows/: tests.yml
docs/: DESIGN.md  GOAL.md  TRAINING_DATA_GENERATION.md
docs/llm-wiki/: index.md  log.md
prompts/: analyzer_video.md  analyzer_web.md
src/kb/: __init__.py  analyzer.py  cli.py  concepts.py  core.py  dedup.py  embeddings.py  export.py  generate.py  graph.py  health.py  index.py  ingest.py  related.py  storage.py  sync.py  vectors.py  web.py
src/kb/parsers/: paper.py  pdf.py  repo.py  video.py
src/kb/prompts/: analyzer_base.md  analyzer_memo.md  analyzer_paper.md  analyzer_pdf.md  analyzer_repo.md  training_data.md
tests/: test_analyzer.py  test_cli.py  test_collections.py  test_concepts.py  test_core.py  test_dedup.py  test_embeddings.py  test_export.py  test_generate.py  test_graph.py  test_health.py  test_index.py  test_ingest.py  test_install.py  test_parsers_paper.py  test_parsers_pdf.py  test_parsers_repo.py  test_parsers_video.py  test_related.py  test_storage.py  test_sync.py  test_vectors.py  test_web.py
