[project]
name = "knowledge-bucket"
version = "0.1.0"
description = "Git-backed knowledge management with ULID IDs and hash-sharded paths"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "flask>=3.0",
    "pypdf>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
export = [
    "pyarrow>=14.0",
]
vector = [
    "numpy>=1.24",
]
storage = [
    "boto3>=1.28",
]

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
